# borealis

./: -  .gitignore  AUTHORS  Makefile  NOTICE  README.md  actions  meson.build  pull_request_template.md  requirements.txt
demo/: captioned_image.cpp  captioned_image.hpp  components_tab.cpp  components_tab.hpp  dynamic_image.cpp  dynamic_image.hpp  main.cpp  main_activity.cpp  main_activity.hpp  random_rgba_image.cpp  random_rgba_image.hpp  recycling_list_tab.cpp  recycling_list_tab.hpp  settings_file.hpp  storage_file_demo.cpp  storage_file_demo.hpp
example/: SampleInstallerPage.cpp  SampleInstallerPage.hpp  SampleLoadingPage.cpp  SampleLoadingPage.hpp  main.cpp  sample_installer_page.cpp  sample_installer_page.hpp  sample_loading_page.cpp  sample_loading_page.hpp
include/: Animations.hpp  Application.hpp  Borealis.hpp  BoxLayout.hpp  Button.hpp  CrashFrame.hpp  FrameContext.hpp  Label.hpp  LinearLayout.hpp  List.hpp  Rectangle.hpp  SettingsFrame.hpp  Sidebar.hpp  Style.hpp  TabFrame.hpp  Theme.hpp  View.hpp
include/nanovg/: stb_truetype.h
resources/: .gitignore
resources/i18n/de/: brls.json  demo.json
resources/i18n/en-US/: brls.json  demo.json  demo.xml  main.json
resources/i18n/fr/: demo.json  demo.xml  main.json
resources/shaders/: simple_fsh.glsl  simple_vsh.glsl
resources/shaders/gaussian_blur/: frag.glsl  vert.glsl
resources/xml/activity/: main.xml
resources/xml/cells/: cell.xml
resources/xml/tabs/: components.xml  recycling_list.xml  settings_list.xml  storage_file.xml
resources/xml/views/: captioned_image.xml  dynamic_image.xml  random_rgba_image.xml
scripts/: format.sh  i18n-json-to-xml.py  i18n-linter.py
source/: main.cpp
